Redesigned relationship model
